--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -28,6 +28,67 @@ body {
 
   width: 700px;
 }
-.h1{
+/* .logo{
+
+  width: 700px;
+} */
+/* h1{
+  color: #000;
+  font-size: calc(20px + 2vmin);
+}
+label{
+  color: #000;
+  font-size: calc(10px + 2vmin);
   
 }
+input{
+
+  display: block;
+  font-size: 1.2em;
+  padding: 0.25em;
+  width: 70%;
+  margin-bottom: 1px;
+  border-radius: 1px;
+  border: 2px solid #8c8f8a;
+}
+.haya{
+  width: 400px;
+  background: #8f918f93;
+  padding: 3% ;
+  margin: 1em auto;
+  border-top: 5px solid #000000;
+  box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
+}
+.haya1{
+  width: 400px;
+  background: #8f918f93;
+  padding: 3% ;
+  margin: 1em auto;
+  border-top: 5px solid #000000;
+  box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
+}
+.haya3{
+  width: 400px;
+  background: #8f918f93;
+  padding: 3% ;
+  margin: 1em auto;
+  border-top: 5px solid #000000;
+  box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
+}
+.haya4{
+  width: 400px;
+  background: #8f918f93;
+  padding: 3% ;
+  margin: 1em auto;
+  border-top: 5px solid #000000;
+  box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
+}
+.haya5{
+  width: 400px;
+  background: #8f918f93;
+  padding: 3% ;
+  margin: 1em auto;
+  border-top: 5px solid #000000;
+  box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
+} */
+
