create and updtae in pages

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -6,33 +6,27 @@ body {
   font-family: Arial;
   text-align: center;
 }
-
-
-
 .button
 {
   font-family: 'Helvetica', 'Arial', sans-serif;
   display: inline-block;
-    font-size: 12px;
-    padding: 1em 2em;
+    font-size: 17px;
+    padding: 1em 3em;
     margin-top: 0px;
-   margin-bottom: 13px;
-     background-color:#f3c81da4;
-    border-radius: 40px;
+   margin-bottom: 17px;
+     background-color:#8a8880a4;
+    border-radius: 50px;
    border: none;
    cursor: pointer;
      position: relative;
-    box-shadow: 0 2px 25px #ffffffb7;
-}
-.logo{
-
-  width: 700px;
+   
+    box-shadow: 0 2px 25px #fbfcff;
 }
 /* .logo{
 
   width: 700px;
 } */
-/* h1{
+h1{
   color: #000;
   font-size: calc(20px + 2vmin);
 }
@@ -90,5 +84,158 @@ input{
   margin: 1em auto;
   border-top: 5px solid #000000;
   box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
-} */
+}
+.button10{
 
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+    font-size: 15px;
+    padding: 1em 3em;
+    margin-top: 0px;
+   margin-bottom: 17px;
+     background-color:#8a8880a4;
+    border-radius: 50px;
+   border: none;
+   cursor: pointer;
+     position: relative;
+/*    
+    box-shadow: 0 2px 25px #fbfcff; */
+}
+.b1{
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+    font-size: 15px;
+    padding: 1em 3em;
+    margin-top: 0px;
+   margin-bottom: 17px;
+     background-color:#8a8880a4;
+    border-radius: 50px;
+   border: none;
+   cursor: pointer;
+     position: relative;
+   
+    /* box-shadow: 0 2px 25px #fbfcff; */
+}
+
+
+
+.b2{
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+    font-size: 15px;
+    padding: 1em 3em;
+    margin-top: 0px;
+   margin-bottom: 17px;
+     background-color:#8a8880a4;
+    border-radius: 50px;
+   border: none;
+   cursor: pointer;
+     position: relative;
+/*    
+    box-shadow: 0 2px 25px #fbfcff; */
+}
+.b{
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+    font-size: 15px;
+    padding: 1em 3em;
+    margin-top: 0px;
+   margin-bottom: 15px;
+     background-color:#8a8880a4;
+    border-radius: 50px;
+   border: none;
+   cursor: pointer;
+     position: relative;
+   
+    /* box-shadow: 0 2px 25px #fbfcff; */
+}
+.hh{
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+    font-size: 15px;
+    padding: 1em 3em;
+    margin-top: 0px;
+   margin-bottom: 17px;
+     background-color:#8a8880a4;
+    border-radius: 50px;
+   border: none;
+   cursor: pointer;
+     position: relative;
+   
+    /* box-shadow: 0 2px 25px #fbfcff; */
+}
+.oo{
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+    font-size: 15px;
+    padding: 1em 3em;
+    margin-top: 0px;
+   margin-bottom: 17px;
+     background-color:#8a8880a4;
+    border-radius: 50px;
+   border: none;
+   cursor: pointer;
+     position: relative;
+   
+    /* box-shadow: 0 2px 25px #fbfcff; */
+  }
+.zz{
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+    font-size: 15px;
+    padding: 1em 3em;
+    margin-top: 0px;
+   margin-bottom: 17px;
+     background-color:#8a8880a4;
+    border-radius: 50px;
+   border: none;
+   cursor: pointer;
+     position: relative;
+   
+    /* box-shadow: 0 2px 25px #fbfcff; */
+}
+.hello{ 
+
+
+  width: 400px;
+  background: #8f918f93;
+  padding: 3% ;
+  margin: 1em auto;
+  border-top: 5px solid #000000;
+  box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
+  color: #000;
+  font-size: calc(10px + 2vmin);
+}
+.za{ 
+  width: 400px;
+  background: #8f918f93;
+  padding: 3% ;
+
+  margin: 1em auto;
+  border-top: 5px solid #000000;
+  box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
+  color: #000;
+  font-size: calc(10px + 2vmin);
+}
+.row{
+  width: 400px;
+  background: #8f918f93;
+  padding: 3% ;
+
+  margin: 1em auto;
+  border-top: 5px solid #000000;
+  box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
+  color: #000;
+  font-size: calc(10px + 2vmin);
+}
+.AA{
+  width: 400px;
+  background: #8f918f93;
+  padding: 3% ;
+
+  margin: 1em auto;
+  border-top: 5px solid #000000;
+  box-shadow: 0 2px 10px rgba(92, 92, 92, 0.8);
+  color: #000;
+  font-size: calc(10px + 2vmin);
+}
